[gd_scene load_steps=2 format=3 uid="uid://7xjtviyrffop"]

[ext_resource type="Script" path="res://scripts/menus/options.gd" id="1_wajs8"]

[node name="options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wajs8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 193.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 141
text = "OPCIONES"
horizontal_alignment = 1

[node name="botones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 290.0
offset_top = -121.0
offset_right = -290.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="sonido" type="Button" parent="botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Sonido"

[node name="resolution" type="Button" parent="botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Resoluci√≥n"

[node name="atras" type="Button" parent="botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Atras"

[connection signal="pressed" from="botones/sonido" to="." method="_on_sonido_pressed"]
[connection signal="pressed" from="botones/resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="botones/atras" to="." method="_on_atras_pressed"]
