class_name class_options_menu extends Control


func _on_sonido_pressed() -> void:
	pass # Replace with function body.


func _on_resolution_pressed() -> void:
	pass # Replace with function body.


func _on_atras_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/menus/mainmenu.tscn")
